# awtk

./: .clang-format  .gitignore  .sconsign.dblite  CMakeLists.txt  CONTRIBUTING.md  README.md  README_zh.md  SConstruct  SDL2Config.cmake  TODO  TODO.md  armlinux  awtk-cmake.md  awtk-config.cmake  awtk_config.py  awtk_config_common.py  build.json  build_old.json  build_ui_old.json  build_with_cmake.sh  component.json  doc_todo.md  e.xml  foobar.fs  format.sh  log  m.js  main.fs  project.json  r.xml  r1.xml  r2.xml  release_version.sh  run_fscript_test.sh  run_ui_test.sh  sync_tkc.sh  t.xml  t1.xml  text.txt  update_res.py  (+2 more)
3rd/SheenBidi-3.0.0/: CMakeLists.txt  README.md  SConscript  SheenBidi.cmake.in  meson.build  meson_options.txt
3rd/SheenBidi-3.0.0/.github/: FUNDING.yml
3rd/SheenBidi-3.0.0/Source/: SheenBidi.c
3rd/SheenBidi-3.0.0/Tests/: AlgorithmTests.cpp  AlgorithmTests.h  AllocatorTests.cpp  AllocatorTests.h  AtomicTests.cpp  AtomicTests.h  AttributeManagerTests.cpp  AttributeManagerTests.h  AttributeRunIteratorTests.cpp  AttributeRunIteratorTests.h  BidiTypeLookupTests.cpp  BracketLookupTests.cpp  BracketQueueTests.cpp  BracketQueueTests.h  CodepointSequenceTests.cpp  CodepointSequenceTests.h  CodepointTests.cpp  GeneralCategoryLookupTests.cpp  LogicalRunIteratorTests.cpp  LogicalRunIteratorTests.h  Makefile  MirrorLookupTests.cpp  OnceTests.cpp  OnceTests.h  ParagraphIteratorTests.cpp  ParagraphIteratorTests.h  RunQueueTests.cpp  RunQueueTests.h  ScriptLocatorTests.cpp  ScriptLocatorTests.h  ScriptLookupTests.cpp  ScriptRunIteratorTests.cpp  ScriptRunIteratorTests.h  ScriptTests.cpp  ScriptTests.h  TextTests.cpp  TextTests.h  ThreadLocalStorageTests.cpp  ThreadLocalStorageTests.h  VisualRunIteratorTests.cpp  (+2 more)
3rd/SheenBidi-3.0.0/cmake/: SheenBidiConfig.cmake.in
3rd/agg/: CMakeLists.txt  Makefile  Makefile.AmigaOS  Makefile.in.BeOS  Makefile.in.CYGWIN_NT-5.1  Makefile.in.Darwin  Makefile.in.Darwin.SDL  Makefile.in.IRIX64  Makefile.in.Linux  Makefile.in.Linux.SDL  Makefile.in.MINGW32_NT-5.0  Makefile.in.SunOS  README  README.md  SConscript  autogen.sh  cmake_install.html  configure.ac  distclean  install  libagg.m4  libagg.pc.in  sync.py
3rd/agg-2.5/: Makefile.AmigaOS  Makefile.am  Makefile.in.BeOS  Makefile.in.Darwin  Makefile.in.Darwin.SDL  Makefile.in.IRIX64  Makefile.in.MINGW32_NT-5.1  Makefile.in.SunOS  SConscript  configure.in  distclean  install  readme
3rd/agg-2.5/examples/: Makefile.am  aa_demo.cpp  aa_test.cpp  alpha_gradient.cpp  alpha_mask.cpp  alpha_mask2.cpp  alpha_mask3.cpp  bezier_div.cpp  blend_color.cpp  blur.cpp  bspline.cpp  circles.cpp  component_rendering.cpp  compositing.cpp  compositing2.cpp  conv_contour.cpp  conv_dash_marker.cpp  conv_stroke.cpp  distortions.cpp  flash_rasterizer.cpp  flash_rasterizer2.cpp  freetype_test.cpp  gamma_correction.cpp  gamma_ctrl.cpp  gamma_tuner.cpp  gouraud.cpp  gouraud_mesh.cpp  gpc_test.cpp  gradient_focal.cpp  gradients.cpp  graph_test.cpp  idea.cpp  image1.cpp  image_alpha.cpp  image_filters.cpp  image_filters2.cpp  image_fltr_graph.cpp  image_perspective.cpp  image_resample.cpp  image_transforms.cpp  (+32 more)
3rd/agg-2.5/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h
3rd/agg-2.5/font_win32_tt/: agg_font_win32_tt.cpp  agg_font_win32_tt.h
3rd/agg-2.5/gpc/: VERSIONS.TXT  gpc.c  gpc.h
3rd/agg-2.5/include/: agg_alpha_mask_u8.h  agg_arc.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_bitset_iterator.h  agg_blur.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_gray.h  agg_color_rgba.h  agg_config.h  agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_smooth_poly1.h  agg_conv_stroke.h  agg_conv_transform.h  agg_conv_unclose_polygon.h  agg_curves.h  agg_dda_line.h  agg_ellipse.h  agg_ellipse_bresenham.h  agg_embedded_raster_fonts.h  agg_font_cache_manager.h  agg_gamma_functions.h  agg_gamma_lut.h  (+74 more)
3rd/agg-2.5/src/: Makefile  Makefile.am  agg_arc.cpp  agg_arrowhead.cpp  agg_bezier_arc.cpp  agg_bspline.cpp  agg_curves.cpp  agg_embedded_raster_fonts.cpp  agg_gsv_text.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_rounded_rect.cpp  agg_sqrt_tables.cpp  agg_trans_affine.cpp  agg_trans_double_path.cpp  agg_vcgen_bspline.cpp  (+11 more)
3rd/libunibreak/: .gitignore  .mailmap  AUTHORS  ChangeLog  Doxyfile  LICENCE  Makefile.am  NEWS  README.md  SConscript  configure.ac  emojidata.c  emojidef.c  emojidef.h  graphemebreak.c  graphemebreak.h  graphemebreakdata.inc  graphemebreakdef.h  linebreak.c  linebreak.h  linebreakdata.c  linebreakdef.c  linebreakdef.h  sync.py  unibreakbase.h  unibreakdef.c  unibreakdef.h  wordbreak.c  wordbreak.h  wordbreakdata.inc  wordbreakdef.h
3rd/picasso/: AUTHORS  COPYING  CREDITS  ChangeLog  Doxyfile  Makefile.am  README  README.md  SConscript  autogen.sh  build_android.sh  build_proj.bat  build_proj.sh  configure.in  picasso.gyp  tags
demos/: .gitignore  CMakeLists.txt  README.md  SConscript  aggdemo1.cpp  assets-1m.c  assets-mini.c  assets.c  assets.h  assets_all.c  assets_dark.c  assets_dark.inc  assets_default.c  assets_default.inc  assets_old-1m.c  assets_old.c  assets_uiex-1m.c  assets_web.c  assets_web.js  common.c  common.inc  demo1_app.c  demo1_main.c  demo2_app.c  demo_5key_app.c  demo_animator_app.c  demo_basic.c  demo_canvas_offline.c  demo_desktop.c  demo_edit_suggest.c  demo_file_browser.c  demo_layers.c  demo_main.c  demo_opengl.c  demo_overlay.c  demo_progress_circle.c  demo_rounded_rect.c  demo_scroll_view.c  demo_thread_app.c  demo_tr_app.c  (+15 more)
demos/assets/: README.md  __assets_dark.inc  __assets_default.inc
demos/layouts/: demo1.xml  demo2.xml
demos/res/: font20.data  theme.data
demos/xml/: edit.xml  progress_bar.xml  slide_view.xml  slide_view_h.xml  slider.xml
examples/cmake_find_awtk/: CMakeLists.txt  main.c
(+7229 files in other folders)
