SUBDIRS = gpc src font_freetype font_win32_tt include examples

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libagg.pc

EXTRA_DIST = Makefile.AmigaOS \
						 Makefile.in.BeOS \
						 Makefile.in.CYGWIN_NT-5.0 \
						 Makefile.in.CYGWIN_NT-5.1 \
						 Makefile.in.Darwin \
						 Makefile.in.Darwin.SDL \
						 Makefile.in.IRIX64 \
						 Makefile.in.Linux \
						 Makefile.in.Linux.SDL \
						 Makefile.in.MINGW32_NT-5.0 \
						 Makefile.in.MINGW32_NT-5.1 \
						 Makefile.in.SunOS 

# M4 macro file for inclusion with autoconf
m4datadir = $(datadir)/aclocal
m4data_DATA = libagg.m4
